# fastapi-be-codex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: export-openapi.yml  publish-container.yml
alembic/: env.py
alembic/versions/: 202407170000_create_listings.py  202407170001_create_users.py  202407170002_connect_listings_to_users.py  202409010000_add_listing_images.py
app/: main.py
app/api/: router.py
app/api/v1/: auth.py  listings.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  listing.py  listing_image.py  user.py
app/repositories/: listing_repository.py  user_repository.py
app/schemas/: listing.py  user.py
app/services/: auth_service.py  listing_service.py  storage_service.py  user_service.py
infra/: deployment.yaml  ingressroute.yaml  namespace.yaml  secrets.yaml  service.yaml
scripts/: export_openapi.py
