[project]
name = "fastapi-be-codex"
version = "0.1.0"
description = "FastAPI backend for real estate listings"
authors = [{name = "FastAPI Codex"}]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.112.1",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pydantic-settings>=2.4.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.12.5",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.ruff.isort]
known-first-party = ["app"]
profile = "black"

[tool.uv]
python-preference = "only-managed"

[tool.hatch.build.targets.wheel]
packages = ["app"]
